# slack-snowflake-agent

./: .gitignore  README.md  agent_workflow.py  main.py  mcp_client.py  pyproject.toml  query_builder.py  requirements.txt  response_formatter.py  slack_bot.py
.kiro/specs/slack-snowflake-agent/: design.md  requirements.md  tasks.md
agent/: config.py  core.py
agent/tools/: __init__.py  slack_tools.py  snowflake_tools.py
tests/: test_mcp_tools.py  test_snowflake_connection.py  test_tool.py
tests/integration/: test_mcp_integration.py  test_slack_to_snowflake.py  test_workflow_integration.py
tests/unit/: test_agent_workflow.py  test_config.py  test_mcp_client.py  test_query_builder.py  test_response_formatter.py  test_slack_bot.py
