[project]
name = "mcp-server-snowflake"
version = "0.1.0"
description = "Snowflake MCP Server for Claude Desktop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",              # MCP framework
    "snowflake-connector-python",  # Snowflake DB access
    "python-dotenv",               # For .env file loading
    "pytest",                      # For testing
]

[tool.mcp]
# MCP server configuration

[tool.uv.scripts]
dev = "python main.py"  # Start the MCP server
test = "pytest tests/"  # Run tests
